# advent2025

./: .gitignore  CMakeLists.txt  run.sh
day01/: part1.cpp  part2.cpp
day02/: part1.cpp  part2.cpp
day03/: part1.cpp  part1.h  part2.cpp  part2.h
day04/: part1.cpp  part2.cpp
day05/: part1.cpp  part2.cpp
day06/: part1.cpp  part2.cpp
day07/: part1.cpp  part2.cpp
day08/: part1.cpp  part2.cpp
day09/: part1.cpp  part2.cpp
day10/: part1.cpp  part2.cpp
day11/: part1.cpp  part2.cpp
day12/: part1.cpp  part2.cpp
