cmake_minimum_required(VERSION 3.10)
project(AdventOfCode2025 CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(day01_part1 day01/part1.cpp)
add_executable(day01_part2 day01/part2.cpp)

add_executable(day02_part1 day02/part1.cpp)
add_executable(day02_part2 day02/part2.cpp)

add_executable(day03_part1 day03/part1.cpp)
add_executable(day03_part2 day03/part2.cpp)

add_executable(day04_part1 day04/part1.cpp)
add_executable(day04_part2 day04/part2.cpp)

add_executable(day05_part1 day05/part1.cpp)
add_executable(day05_part2 day05/part2.cpp)

add_executable(day06_part1 day06/part1.cpp)
add_executable(day06_part2 day06/part2.cpp)

add_executable(day07_part1 day07/part1.cpp)
add_executable(day07_part2 day07/part2.cpp)

add_executable(day08_part1 day08/part1.cpp)
add_executable(day08_part2 day08/part2.cpp)

add_executable(day09_part1 day09/part1.cpp)
add_executable(day09_part2 day09/part2.cpp)

add_executable(day10_part1 day10/part1.cpp)
add_executable(day10_part2 day10/part2.cpp)

add_executable(day11_part1 day11/part1.cpp)
add_executable(day11_part2 day11/part2.cpp)

add_executable(day12_part1 day12/part1.cpp)
add_executable(day12_part2 day12/part2.cpp)

